# MyXPlay

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/liuy/myxplay/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  XData.cpp  XData.h  XLog.cpp  XLog.h  XParameter.cpp  XParameter.h  XThread.cpp  XThread.h  music-player.cpp
app/src/main/java/com/liuy/myxplay/: MainActivity.java
app/src/main/jniLibs/include/: config.h  ffmpeg.c
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/liuy/myxplay/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
